fix body overflow

--- a/css/main.css
+++ b/css/main.css
@@ -349,9 +349,6 @@ address {
     -webkit-transition: opacity var(--animation-duration) var(--animation-timing-function), visibility var(--animation-duration) var(--animation-timing-function);
     transition: opacity var(--animation-duration) var(--animation-timing-function), visibility var(--animation-duration) var(--animation-timing-function);
   }
-  .mobile-navigation.is-open body.lock {
-    overflow: hidden;
-  }
 }
 
 @media screen and (min-width: 480px) and (max-width: 767px) {
@@ -547,7 +544,7 @@ address {
 }
 
 @media screen and (max-width: 767px) {
-  body.lock {
+  html.lock {
     overflow-y: hidden;
   }
 }
