--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -21,10 +21,6 @@
       transition: opacity var(--animation-duration)
           var(--animation-timing-function),
         visibility var(--animation-duration) var(--animation-timing-function);
-
-      body.lock {
-        overflow: hidden;
-      }
     }
   }
 }
@@ -208,7 +204,7 @@ body.lock {
   }
 }
 
-body.lock {
+html.lock {
   @media screen and (max-width: 767px) {
     overflow-y: hidden;
   }
